--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
+    "axios": "^0.21.0",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
